--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_image_copy"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
+    <TextView
+        android:id="@+id/username"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="132dp"
+        android:textColor="#38465b"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/headshot"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Maxwell Graham" />
 
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="#38465b"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@+id/headshot"
+        app:layout_constraintStart_toStartOf="@+id/username"
+        app:layout_constraintTop_toBottomOf="@+id/username"
+        tools:text="Melbourne, Australia" />
+
+    <ImageView
+        android:id="@+id/headshot"
+        android:layout_width="105dp"
+        android:layout_height="105dp"
+        android:layout_marginTop="49dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="75dp"
+        android:contentDescription="@string/headshot_contentDescription"
+        app:layout_constraintBottom_toTopOf="@+id/cards"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:contentDescription="@string/settings_contentDescription"
+        android:src="@drawable/ic_settings"
+        app:layout_constraintStart_toStartOf="@+id/username"
+        app:layout_constraintTop_toBottomOf="@+id/headshot" />
+
+    <ImageView
+        android:id="@+id/mobile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="37dp"
+        android:contentDescription="@string/mobile_contentDescription"
+        android:src="@drawable/ic_mobile"
+        app:layout_constraintBottom_toBottomOf="@+id/settings"
+        app:layout_constraintStart_toEndOf="@+id/settings" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/cards"
+        android:layout_width="match_parent"
+        android:layout_height="228dp"
+        android:layout_marginTop="228dp"
+        android:layout_marginBottom="183dp"
+        android:background="@color/paleGrey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_line"
+        app:layout_constraintEnd_toEndOf="@+id/cards"
+        app:layout_constraintStart_toStartOf="@+id/cards"
+        app:layout_constraintTop_toTopOf="@+id/cards"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_line"
+        app:layout_constraintBottom_toBottomOf="@+id/cards"
+        app:layout_constraintEnd_toEndOf="@+id/cards"
+        app:layout_constraintStart_toStartOf="@+id/cards"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
+        android:layout_marginBottom="61dp"
+        android:src="@drawable/ic_openpay_brandmark_positive_rgb_copy"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cards"
+        android:contentDescription="@string/logo_contentDescription" />
 </android.support.constraint.ConstraintLayout>
