Ellipsize profile text views, add touchable background to icons

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
   <color name="colorPrimaryDark">#00574B</color>
   <color name="colorAccent">#D81B60</color>
     <color name="paleGrey">#e1e5f3</color>
+    <color name="greyText">#38465b</color>
 </resources>
