--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,11 @@
         android:layout_marginTop="72dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="132dp"
-        android:textColor="#38465b"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/greyText"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintBottom_toTopOf="@+id/cards"
         app:layout_constraintEnd_toStartOf="@+id/headshot"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textColor="#38465b"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/greyText"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/headshot"
         app:layout_constraintStart_toStartOf="@+id/fullName"
@@ -53,6 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
+        android:background="?attr/selectableItemBackground"
         android:contentDescription="@string/settings_contentDescription"
         android:src="@drawable/ic_settings"
         app:layout_constraintStart_toStartOf="@+id/fullName"
@@ -63,6 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="37dp"
+        android:background="?attr/selectableItemBackground"
         android:contentDescription="@string/mobile_contentDescription"
         android:src="@drawable/ic_mobile"
         app:layout_constraintBottom_toBottomOf="@+id/settings"
@@ -79,7 +85,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_line"
